fix form header alignment

--- a/login/resources/css/signin.css
+++ b/login/resources/css/signin.css
@@ -108,11 +108,6 @@ body {
     position: relative;
 }
 
-.login-card header {
-  display: flex;
-  justify-content: space-between;
-}
-
 .login-header {
     margin-bottom: 20px;
     display: -ms-flexbox !important;
